Fixing spacing for signup or login message

--- a/app/assets/stylesheets/components/_session_form.scss
+++ b/app/assets/stylesheets/components/_session_form.scss
@@ -84,6 +84,7 @@
 .session-button:hover {
     color: #d7d7d7;
 }
+
 // circle logos
 .circles-container {
     height: 1.5rem;
@@ -102,6 +103,16 @@
 .sign-up-or-log-in {
     font-size: 0.875rem;
     margin-top: 7px;
+
+    a {
+        text-decoration: none;
+        color: #006dac;
+    }
+
+    a:hover {
+        text-decoration: underline;
+        color: #128fdc;
+    }
 }
 
 //List of errors
@@ -112,6 +123,4 @@
     font-weight: 300;
     width: 100%;
     height: 20px;
-    // margin-top: 8px;
-    // margin-bottom: 8px;
 }
